# deepcsim

./: .gitignore  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
src/deepcsim/: __init__.py  cli.py  constants.py
src/deepcsim/api/: __init__.py  server.py
src/deepcsim/api/routers/: __init__.py  analysis.py  explorer.py  files.py
src/deepcsim/api/schemas/: __init__.py  analysis.py  file.py  scan.py
src/deepcsim/api/templates/: explorer.html  index.html
src/deepcsim/core/: __init__.py  analyzer.py  comparator.py  metrics.py  scanner.py  similarity.py
src/deepcsim/utils/: file_info.py
tests/: test_similarity.py
